<resources>
    <string name="app_name">Charity With Books</string>
    <string name="next">Next</string>

    <!-- Generic Strings-->
    <string name="help_kids">Add kids you know into the app</string>
    <string name="help_kids_description">Siblings, neighbors, underprivileged kids on the street… any kid you really want to help educate</string>

    <string name="add_books">Help them choose a book</string>
    <string name="add_books_description">The app will let them choose from recommended books for their ages and grade levels. Or you may even add your own suggestions</string>

    <string name="quiz_kids">Track their progress</string>
    <string name="quiz_Kids_description">The app will provide quizzes on the books they read, and even organize competitions that could win them prizes</string>


    <string name="join">Join</string>

    <!-- Read And Accept License Agreement-->
    <string name="read_and_accepted">I accept the</string>
    <string name="terms_and_conditions">Terms and Regulations</string>
    <string name="of_charity_with_books">of Charity With Books</string>

    <!-- Input Field Strings-->
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_or_phone">Email or Phone Number</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="kids">Help Kids</string>
    <string name="books">Add Books</string>
    <string name="quizes">Create Quizes</string>
    <string name="connect_with_friends">Connect with friends</string>
    <string name="about_us">About us</string>
    <string name="profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="help_kids_read">Help Kids Read</string>
    <string name="me">Me</string>
    <string name="news">News</string>
</resources>
